# UltrastikCmd

./: .gitignore
libhid-0.2.16/: configure.ac
libhid-0.2.16/m4/: ac_pkg_swig.m4  ac_python_devel.m4  md_check_libusb018b.m4
libhid-0.2.16/src/: hid_opening.c
libhid-0.2.16/test/: lshid.c
ultrastikcmd-0.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac
ultrastikcmd-0.2/autom4te.cache/: output.0  requests  traces.0  traces.1
ultrastikcmd-0.2/maps/: 2-Way_Left_Right.um  2-Way_Up_Down.um  4-Way.um  4-Way_Diagonals_Only.um  4-Way_No_Sticky_UD_Bias.um  8-Way.um  8-Way_Easy_Diagonals.um  Analog.um  Makefile.am  Makefile.in  Mouse_Pointer.um
ultrastikcmd-0.2/src/: Makefile.am  Makefile.in  ultrastikcmd.cpp
ultrastikcmd-0.2/tools/: Makefile.am  Makefile.in  ultrastikgui.pl
