
mapdir = $(datadir)/ultrastikcmd/maps

map_DATA = 	2-Way_Left_Right.um \
			4-Way_Diagonals_Only.um \
			4-Way.um \
			8-Way.um \
			Mouse_Pointer.um \
			2-Way_Up_Down.um \
			4-Way_No_Sticky_UD_Bias.um \
			8-Way_Easy_Diagonals.um \
			Analog.um
			
EXTRA_DIST =	2-Way_Left_Right.um \
				4-Way_Diagonals_Only.um \
				4-Way.um \
				8-Way.um \
				Mouse_Pointer.um \
				2-Way_Up_Down.um \
				4-Way_No_Sticky_UD_Bias.um \
				8-Way_Easy_Diagonals.um \
				Analog.um
